# synth

./: .gitignore  pyproject.toml
src/synth/: adsr.py  adsr_old.py  filters.py  generate_waveform.py  keyboard.py  main.py  midi_control.py  note.py  oscillator.py  synth.py  utils.py  virtual_keyboard.py  waveform.py  waveforms.py
tests/: plottest.py  test_generate_waveform.py
